--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #    My SQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/usermanager
 spring.datasource.username=root
-spring.datasource.password=03082001
+spring.datasource.password=giakinh0823
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
