--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #    My SQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/usermanager
+spring.datasource.url=jdbc:mysql://localhost:3306/shopping
 spring.datasource.username=root
 spring.datasource.password=giakinh0823
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8084
